--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,3 +23,16 @@ jobs:
         run: |
           docker build . --tag ghcr.io/serazou/skills-publish-docker-images/stackoverflown:main
           docker push ghcr.io/serazou/skills-publish-docker-images/stackoverflown:main
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ghcr.io/serazou/skills-publish-docker-images/stackoverflown:main
+            ghcr.io/serazou/skills-publish-docker-images/stackoverflown:${{ github.sha }}
